--- a/index.html
+++ b/index.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Convertisseurs</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mes Convertisseurs</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 20px;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      padding: 40px;
-      background: #f5f5f5;
+      min-height: 100vh;
     }
+
+    .container {
+      width: 100%;
+      max-width: 500px;
+      background-color: #fff;
+      padding: 30px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
     h1 {
-      color: #333;
-      margin-bottom: 30px;
+      color: #4287f5;
+      margin-bottom: 25px;
     }
+
     a {
       display: block;
       background-color: #4287f5;
       color: white;
-      padding: 15px 25px;
-      margin: 10px;
       text-decoration: none;
+      padding: 15px;
+      margin: 10px 0;
       border-radius: 8px;
-      transition: background-color 0.2s;
-      text-align: center;
-      width: 90%;
-      max-width: 400px;
+      font-size: 16px;
+      transition: background-color 0.2s ease;
     }
+
     a:hover {
       background-color: #2d5cc7;
     }
   </style>
 </head>
 <body>
-  <h1>Mes Convertisseurs</h1>
-  <a href="type-converter.html">Convertisseur de Type de Données</a>
-  <a href="point-valeur.html">Convertisseur Point-Valeur</a>
-  <a href="timestamp.html">Convertisseur Date ↔️ Timestamp</a>
+  <div class="container">
+    <h1>Mes Convertisseurs</h1>
+    <a href="type-converter.html">🧮 Convertisseur Type de Données</a>
+    <a href="point-valeur.html">📊 Convertisseur Point-Valeur</a>
+    <a href="timestamp.html">🕒 Convertisseur Date ↔️ Timestamp</a>
+  </div>
 </body>
 </html>
