--- a/type-converter.html
+++ b/type-converter.html
@@ -48,6 +48,8 @@
     }
 
     .btn {
+  display: block;
+  box-sizing: border-box;
       width: 100%;
       padding: 12px;
       margin-top: 15px;
