--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#4287f5">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mes Convertisseurs</title>
   <style>
     body {
@@ -48,6 +47,8 @@
       background-color: #2d5cc7;
     }
   </style>
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#4287f5">
 </head>
 <body>
   <div class="container">
